--- a/estilo.css
+++ b/estilo.css
@@ -13,7 +13,7 @@ html {
 }
 
 #inicio {
-    background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url("img/fondo-inicio.jpg");
+    background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url("img/fondo-inicio2.jpg");
     background-size: cover;
     background-position: center center;
     height: 100vh;
