--- a/estilo.css
+++ b/estilo.css
@@ -586,7 +586,7 @@ footer a:hover{
 /*SECCION RESPONSIVE*/
 @media screen and (max-width: 800px){
     .redes {
-        display: none;
+        display: block;
     }
     nav {
         display: none;
